--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,13 @@
-FROM node:latest
+FROM node:alpine
 
 WORKDIR /app
 
-COPY Package.json .
+COPY package.json .
 
 RUN npm install
 
 COPY . .
 
-EXPOSE 80
+EXPOSE 5000
 
-CMD [ "node" , "index.js"]
+CMD [ "node", "index.js" ]
