--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,7 @@
-FROM node:alpine
-
-WORKDIR /app
-
-COPY package.json .
-
-RUN npm install
-
-COPY . .
-
-EXPOSE 8080
-
-CMD [ "node", "index.js" ]
+FROM ubuntu:18.04
+RUN apt update -y
+RUN apt install nginx -y
+COPY index.html /var/www/html
+RUN rm /var/www/html/index.nginx-debian.html
+EXPOSE 80 
+CMD ["nginx", "-g","daemon off;"]
